<resources>
    <string name="app_name">My First Application</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>
    <string name="return_button_text">Return</string>

    <!-- Strings used for headers of fragments -->
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="learn_fragment_text">Dice Roll Game!</string>
    <string name="hello_first_fragment">0</string>

    <!-- Strings used for buttons of fragments -->
    <string name="hit_button_text">Hit</string>
    <string name="count_button_text">Count</string>
    <string name="funny_button_text">Fun</string>
    <string name="roll_button_text">Roll</string>
    <string name="learn_button_text">Learn</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_learn_fragment">Testing Layouts on this Frame</string>
    <string name="learn_layouts_button_text">Learn Layouts</string>
    <string name="return_to_learn_button">Return</string>
    <string name="my_avatar">My avatar</string>
    <string name="biography"> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                              Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt.
                              Tortor at risus viverra adipiscing at in tellus. Vulputate ut pharetra sit amet aliquam.
                              Sapien nec sagittis aliquam malesuada bibendum arcu. Et malesuada fames ac turpis egestas sed tempus.
                              Magna eget est lorem ipsum. Ultricies mi quis hendrerit dolor. Nibh nisl condimentum id venenatis.
                              Urna et pharetra pharetra massa massa. \n

                              Quam quisque id diam vel quam elementum pulvinar. Sit amet tellus cras adipiscing.
                              Ut morbi tincidunt augue interdum velit. Et tortor at risus viverra adipiscing at in tellus integer.
                              Viverra aliquet eget sit amet tellus cras adipiscing enim. Ipsum suspendisse ultrices gravida dictum fusce.
                              Sed risus ultricies tristique nulla aliquet. Lectus mauris ultrices eros in. Feugiat in fermentum posuere urna nec tincidunt praesent semper.
                              Tincidunt tortor aliquam nulla facilisi. Urna neque viverra justo nec ultrices dui sapien. Vivamus arcu felis bibendum ut tristique et.
                              Pellentesque habitant morbi tristique senectus et netus et malesuada fames. \n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator_header">Gu Calculator</string>
    <string name="calc_expression">Enter Expression:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear_calc_expression">C</string>
    <string name="calc_equals">=</string>
    <string name="to_calculator">Calculator</string>
    <string name="calc_add">+</string>
    <string name="calc_sub">-</string>
    <string name="calc_mul">×</string>
    <string name="calc_div">÷</string>
</resources>