<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".LearnLayoutsFragment"
    android:layout_gravity = "center_vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/hello_learn_fragment"
        app:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/header_style" />

    <Button
        android:id="@+id/return_to_learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_learn_button"
        android:visibility = "visible"
        android:layout_gravity = "center_horizontal"/>

    <ImageView
        android:id="@+id/avatar_image"
        style="@style/header_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility = "visible"
        android:contentDescription="@string/my_avatar"
        tools:src="@android:drawable/btn_star" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bio_text"
            style="@style/header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biography" />
    </ScrollView>

</LinearLayout>